	- Fixed HP-UX StatHist.c assertions by making the "hbase_f"
	  functions non-static (Michael Pelletier).
	- Fixed logging of authenticated usernames even if the
	  authorization is not cached (Dancer).
	- Fixed pconnPush() bug that prevented holding on to
	  persistent connections (Manfred Bathelt).
	- Pid file now rewritten on SIGHUP.

Changes to Squid-2.1 (November 16, 1998):

	- Changed delayPoolsUpdate() to be called as an event.
	- Replaced comm_select FD scanning loops with global fd_set
	  structures.  Inspired by Jeff Mogul's patch for squid 1.1.
	- Moved functions common to dns.c, redirect.c, authenticate.c,
	  ipcache.c, and fqdncache.c into helper.c.
	- Changed storeClientCopy2() so that it keeps sending the remainder
	  of a STORE_ABORTED request, instead of cutting off the client as
	  soon as the object becomes aborted.
	- Fixed combined ipf-transparent proxy and a local http-accelerator
	  operation (Quinton Dolan).
	- Rewrote base64_decode.c because of potential buffer overrun
	  bugs.
	- Configurable handling of whitespace in request URI's.
	  See 'uri_whitespace' in squid.conf.
	- Added ability to generate HTTP redirect messages from
	  the redirector output by prepending "301:" or "302:" to the
	  new url.  See FAQ 4.16 for more details.
	- Eliminated refreshWhen() which was out-of-sync with refreshCheck()
	  potentially causing under-utilized cache digests
	- Maintain refreshCheck statistics on per-protocol basis so we
	  can tell why ICP or Digests return too many misses, etc.
	- Fixed delay_pools.c class2/class3 typo (Simon Woods).
	- Changed squid.conf's default access controls to deny all
	  HTTP requests.  Admins must write ACL rules to specifically
	  allow their local clients.
	- Patched French error messages (Mathias HERBERTS).
	- NextStep porting fixes by Mike Laster:
		- use xstrdup() in cf_gen.c
		- check for putenv() in configure
		- #define S_ISDIR macro
	- Added --disable-poll configure option (Henrik Nordstrom).