@@ -1,6 +1,6 @@
 
 /*
- * $Id: HttpRequest.c,v 1.20 1999/01/11 22:23:07 wessels Exp $
+ * $Id: HttpRequest.c,v 1.21 1999/01/22 19:07:00 glenn Exp $
  *
  * DEBUG: section 73    HTTP Request
  * AUTHOR: Duane Wessels
@@ -146,14 +146,11 @@ int
 httpRequestHdrAllowed(const HttpHeaderEntry * e, String * strConn)
 {
     assert(e);
-    /* check connection header first */
+    /* check with anonymizer tables */
+    if (CBIT_TEST(Config.http_header, e->id))
+	return 0;
+    /* check connection header */
     if (strConn && strListIsMember(strConn, strBuf(e->name), ','))
 	return 0;
-    /* check with anonymizer tables */
-    if (Config.onoff.anonymizer == ANONYMIZER_PARANOID) {
-	return httpAnonHdrAllowed(e->id);
-    } else if (Config.onoff.anonymizer == ANONYMIZER_STANDARD) {
-	return !httpAnonHdrDenied(e->id);
-    }
     return 1;
 }
